--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Momentum App</title>
   </head>
   <body>
+    <form id="login-form" class="hidden">
+      <input
+        required
+        maxlength="15"
+        type="text"
+        placeholder="키미노 나마에와"
+      />
+      <button>Log In</button>
+    </form>
+    <h1 id="greeting" class="hidden"></h1>
+    <form id="logout-form" class="hidden">
+      <button>Log out</button>
+    </form>
     <script src="app.js"></script>
   </body>
 </html>
