--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Momentum App</title>
   </head>
   <body>
+    <h2 id="clock">00:00:00</h2>
     <form id="login-form" class="hidden">
       <input
         required
@@ -21,6 +22,12 @@
     <form id="logout-form" class="hidden">
       <button>Log out</button>
     </form>
-    <script src="app.js"></script>
+    <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
+    <script src="./js/greeting.js"></script>
+    <script src="./js/clock.js"></script>
+    <script src="./js/quotes.js"></script>
   </body>
 </html>
