--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </form>
       </div>
     </div>
-    <div class="hiddenstartmenu hidemenu"></div>
+    <div class="hiddenstartmenu hidemenu"><ul id="todo-list"></ul></div>
     <footer>
       <div class="footer__btntodo">
         <button><i class="fa-brands fa-windows fa-2x"></i></button>
@@ -41,7 +41,7 @@
             placeholder="Write a To Do and Press Enter"
           />
         </form>
-        <ul id="todo-list"></ul>
+        
       </div>
       <div id="weather">
         <span></span>
